removes padding-right on smaller mobile devices to prevent whitespace around the edge

--- a/frontend_react/src/components/NavigationDots/NavigationDots.scss
+++ b/frontend_react/src/components/NavigationDots/NavigationDots.scss
@@ -7,6 +7,10 @@
     padding: 1rem;
     overflow: hidden;
 
+    @include firstMobile {
+        padding-right: 0;
+    }
+
     &__dot {
         width: 0.625rem;
         height: 0.625rem;
